--- a/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
+++ b/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
@@ -11,7 +11,7 @@
     >
       <mat-icon svgIcon="search"></mat-icon>
     </button>
-    <p>{{ 'shortcuts.title' | translate }}</p>
+    <p>{{ title | translate }}</p>
     <button matIconButton (click)="close()" [attr.aria-label]="'shortcuts.ariaClose' | translate">
       <mat-icon svgIcon="circle-xmark"></mat-icon>
     </button>
