--- a/src/app/features/components/file-browser/file-viewer/file-viewer-modal.component.scss
+++ b/src/app/features/components/file-browser/file-viewer/file-viewer-modal.component.scss
@@ -81,6 +81,8 @@
       align-items: center;
       width: 100%;
       height: 100%;
+      overflow: hidden;
+      padding: 12px;
 
       &.loading {
         opacity: 0.3;
